# tilscope

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: .gitignore
examples/: report.html  report.results.json
scripts/: download_tirosh2016.py
src/tilscope/: __init__.py  annotate.py  cli.py  data.py  narrative.py  pipeline.py  qc.py  report.py
tests/: test_pipeline.py
