[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tilscope"
version = "0.1.0"
description = "Reproducible single-cell tooling for the tumour microenvironment, with an LLM-written report."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kemal Yaylali", email = "support@yaylali.uk" }]
keywords = ["single-cell", "scRNA-seq", "immuno-oncology", "tumour-microenvironment",
            "T-cell-exhaustion", "bioinformatics", "LLM"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Real .h5ad I/O + Leiden community detection.
sc = ["anndata>=0.10", "scanpy>=1.10", "leidenalg>=0.10", "igraph>=0.11"]
# Claude-written narrative.
llm = ["anthropic>=0.40"]
dev = ["pytest>=7.4"]

[project.scripts]
tilscope = "tilscope.cli:main"

[project.urls]
Homepage = "https://github.com/lynchaos/tilscope"
"Source Code" = "https://github.com/lynchaos/tilscope"
ORCID = "https://orcid.org/0000-0003-1190-7807"

[tool.setuptools.packages.find]
where = ["src"]
